@@ -49,7 +49,7 @@
                             </goals>
                             <configuration>
                                 <headerType>gui</headerType>
-                                <outfile>${project.build.directory}/forge-adventure.exe</outfile>
+                                <outfile>${project.build.directory}/forge-adventure-java8.exe</outfile>
                                 <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
                                 <dontWrapJar>true</dontWrapJar>
                                 <errTitle>forge</errTitle>
@@ -83,10 +83,65 @@
                                     </txtProductVersion>
                                     <productName>forge-adventure</productName>
                                     <internalName>forge-adventure</internalName>
+                                    <originalFilename>forge-adventure-java8.exe</originalFilename>
+                                </versionInfo>
+                            </configuration>
+                        </execution>
+                        <!--extra-->
+                        <execution>
+                            <id>l4j-adv2</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>launch4j</goal>
+                            </goals>
+                            <configuration>
+                                <headerType>gui</headerType>
+                                <outfile>${project.build.directory}/forge-adventure.exe</outfile>
+                                <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
+                                <dontWrapJar>true</dontWrapJar>
+                                <errTitle>forge</errTitle>
+                                <downloadUrl>https://www.oracle.com/java/technologies/downloads/</downloadUrl>
+                                <icon>src/main/config/forge-adventure.ico</icon>
+                                <classPath>
+                                    <mainClass>forge.adventure.Main</mainClass>
+                                    <addDependencies>false</addDependencies>
+                                    <preCp>anything</preCp>
+                                </classPath>
+                                <jre>
+                                    <minVersion>11.0.1</minVersion>
+                                    <jdkPreference>jdkOnly</jdkPreference>
+                                    <maxHeapSize>4096</maxHeapSize>
+                                    <opts>
+                                        <opt>-Dfile.encoding=UTF-8</opt>
+                                        <opt>--add-opens java.base/java.lang=ALL-UNNAMED</opt>
+                                        <opt>--add-opens java.base/java.util=ALL-UNNAMED</opt>
+                                        <opt>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</opt>
+                                        <opt>--add-opens java.base/java.text=ALL-UNNAMED</opt>
+                                        <opt>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</opt>
+                                    </opts>
+                                </jre>
+                                <versionInfo>
+                                    <fileVersion>
+                                        1.0.0.0
+                                    </fileVersion>
+                                    <txtFileVersion>
+                                        1.0.0.0
+                                    </txtFileVersion>
+                                    <fileDescription>Forge</fileDescription>
+                                    <copyright>Forge</copyright>
+                                    <productVersion>
+                                        1.0.0.0
+                                    </productVersion>
+                                    <txtProductVersion>
+                                        1.0.0.0
+                                    </txtProductVersion>
+                                    <productName>forge-adventure</productName>
+                                    <internalName>forge-adventure</internalName>
                                     <originalFilename>forge-adventure.exe</originalFilename>
                                 </versionInfo>
                             </configuration>
                         </execution>
+                        <!--extra-->
                     </executions>
             </plugin>
 
